# anki-kanji-deck-generator

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
src/generator/: main.py
src/generator/config/: config.py
src/generator/helper/: classes.py
src/generator/utils/: api.py  processing.py
src/kanjideck_generator/: __init__.py  main.py
src/kanjideck_generator/config/: config.py  template.py
src/kanjideck_generator/utils/: api.py  processing.py
src/template/: back.html  front.html  styling.css
