[project]
name = "kanji-deck-generator"
version = "0.1.0"
description = ""
authors = [
    {name = "arirismansyah",email = "rismansyah.ari48@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "genanki (>=0.13.1,<0.14.0)",
    "pydantic (>=2.12.5,<3.0.0)"
    
]

[tool.poetry]
packages = [{include = "kanji_deck", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
